add: счетчик для карточек товара, моковый ajax-запрос, хранение и чтение данных из localStorage

--- a/index.html
+++ b/index.html
@@ -126,7 +126,12 @@
         </div>
     </section>
 </main>
-
+<div class="overlay"></div>
+<div class="modal">
+    <div class="modal-content">
+        <!-- Здесь будет контент карточки -->
+    </div>
+</div>
 <script defer src="app.js"></script>
 </body>
 </html>
